--- a/Couturier.Core/Couturier.Core.csproj
+++ b/Couturier.Core/Couturier.Core.csproj
@@ -8,9 +8,8 @@
     <ProjectGuid>{14CFF6A5-6E1D-459D-A317-450A89FDFC20}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AssemblyName>Couturier.Core</AssemblyName>
-    <ReleaseVersion>0.6</ReleaseVersion>
+    <ReleaseVersion>0.6.2</ReleaseVersion>
     <RootNamespace>Couturier.Core</RootNamespace>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,9 +31,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="itextsharp, Version=4.1.2.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="itextsharp">
       <HintPath>..\iText\itextsharp.dll</HintPath>
+    </Reference>
+    <Reference Include="gnome-vfs-sharp, Version=2.24.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
+      <Private>False</Private>
+      <Package>gnome-vfs-sharp-2.0</Package>
     </Reference>
   </ItemGroup>
   <ItemGroup>
